# pyStruct

./: LICENSE  README.md  pyproject.toml
pyStruct/src/: pyproject.toml
src/: pyStructV5.py
