[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "pyStruct"
version = "5.0.1"
authors = [
  { name="Sam" }
]
description = "A small FEM calculation package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [``
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sudo-sam-sam/pyStruct"
Issues = "https://github.com/sudo-sam-sam/pyStruct/issues"